k8s/app-golang/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-golang-svc
spec:
  selector:
    app: golang
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
  type: LoadBalancer
