k8s/app-golang/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: golang.wq
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-golang-svc
                port:
                  number: 8008
